add rule allow underscore dangle after this keyword eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,12 @@
         "linebreak-style": [
             "error",
             "windows"
+        ],
+        "no-underscore-dangle": [
+            "error",
+            {
+                "allowAfterThis": true
+            }
         ]
     }
 }
